# opal-db-management

./: .dockerignore  .editorconfig  .env-sample  .env.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .pre-commit-config.yaml  Dockerfile  README.md  REUSE.toml  THIRDPARTY.md  _typos.toml  alembic.Dockerfile  alembic.ini  back.gitlab-ci.yml_  compose.ssl.yaml  compose.yaml  docker-compose.ssl.yml  docker-compose.yml  index.php  mypy.ini  pyproject.toml  pytest.ini  renovate.json5  ruff.toml  setup.cfg  test_alembic.py
.github/workflows/: build-image.yml  ci.yml  (+1 more)
alembic/: insertTestData.py  insert_test_data.py  run_sql_scripts.py
alembic-opaldb/: alembic.ini  ddl_models.py  dml_models.py  example_dml_models.py  initial_model_populate.py  models.py  populate_models.py
certs/: openssl-ca.cnf  openssl-server.cnf  v3.ext
config/: SecureMySQL.php  adminer-login-ssl.php  mariadb.cnf  opaldb-config.php  opalreportdb-config.php  questionairesdb-config.php  registrationdb-config.php  rpt-config.php  settings.py  ssl.cnf
db/: 01_create_opaldb.sql  02_create_questionnairedb.sql  03_create_registerdb.sql  04_grant_opal_user.sql
db-scripts/: create_dbs.sql  docker-entrypoint.sh  grant_users.sh
db_management/: alembic.ini  connection.py  insert_test_data.py  reset_data.sh  run_sql_scripts.py  settings.py  upgrade_data_muhc.sh  utility.py
dev-data/: insertDevData.py
docker/: alembic-docker-entrypoint.sh  alembic-upgrade.sh  entrypoint.sh
requirements/: base.txt  development.txt
test-data/: insertTestData.py
tests/: test_alembic.py
(+427 files in other folders)
