# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "db-management"
version = "0"
description = "DB Management for Opal's legacy databases"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "alembic==1.15.1",
    "mysqlclient==2.2.7",
    "pymysql==1.1.1",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.40",
]

[dependency-groups]
dev = [
    "alembic==1.15.1",
    "mypy==1.15.0",
    "mysqlclient==2.2.7",
    "pre-commit==4.2.0",
    "pymysql==1.1.1",
    "pytest==8.3.5",
    "pytest-alembic==0.11.1",
    "python-dotenv==1.1.0",
    "ruff==0.11.6",
    "sqlalchemy==2.0.40",
    "types-pymysql==1.1.0.20241103",
]
